[package]
name = "blas-sys"
version = "0.6.9"
license = "Apache-2.0/MIT"
authors = [
    "Andrew Straw <strawman@astraw.com>",
    "Corey Richardson <corey@octayn.net>",
    "Ivan Ukhov <ivan.ukhov@gmail.com>",
    "bluss",
]
description = "The package provides bindings to the Basic Linear Algebra Subprograms."
documentation = "https://docs.rs/blas-sys"
homepage = "https://github.com/stainless-steel/blas-sys"
repository = "https://github.com/stainless-steel/blas-sys"
readme = "README.md"
categories = ["external-ffi-bindings", "science"]
keywords = ["linear-algebra"]

[dependencies]
libc = "0.2"
